Versão 0.1.9 - (08/05/2014)
* Função de listar podcasts: adicionada ocultação da timezone também em datas EDT
* Removida dependência desnecessária: urlresolver
* Alterações na zona de Portugal:
  -Removido "Masterchef Portugal" (tvi), visto que os vídeos foram apagados e não foram adicionados novos
  -Adicionado "Morangos com Açucar 2", "A Jóia de África", "O Teu Olhar" e "Anjo Selvagem"
  -Adicionadas novas fontes
  -Uniformização do icon de pasta nas pastas de Podcasts
* Alterações na zona do Brail:
  -Site assistirnovelas.tv: adicionado suporte ao novo tipo de player externo carregado via js
  -Adicionado suporte ao site curtadoc.tv (curtas metragens)
  -Adicionado suporte ao site podflix.com.br (podcasts br)

Versão 0.1.8 - (24/04/2014)
* Adicionado suporte à listagem e reprodução de podcasts
* Alterações na zona de Portugal:
  -Pasta "Rádio" renomeada para "Rádio e Podcasts"
  -Adicionados diversos podcasts das rádios nacionais tais como: M80, Comercial, Renascença, RDP, TSF...
* Alterações na zona do Brail:
  -Corrigido site webdocumentarios.com

Versão 0.1.7 - (16/04/2014)
* Alterações na zona de Portugal:
  -Adicionado "Melhor do que Falecer" a "Séries TVI"
* Alterações na zona do Brail:
  -Adicionado suporte ao site webdocumentarios.com

Versão 0.1.6 - (15/04/2014)
* Arquivo Sic Corrigido
* Organização do código do addon melhorada e Guideline actualizada, para uma mais fácil manutenção
* Outras modificações

Versão 0.1.5 - (14/04/2014)
* Alterações na zona de Portugal:
  -Daniel Portela on Dailymotion: adicionadas novas playlists de programas da sic
* Alterações na zona do Brasil:
  -Site novelasgravadas.com:
    -Melhorada a forma como as categorias são mostradas e adicionado suporte ao novo tipo de player externo carregado via js
    -Icon actualizado

Versão 0.1.4 - (12/04/2014)
* Alterações na zona de Portugal:
  -Adicionado "Giras e Falidas" (tvi) e "A Outra" (tvi) a partir da fonte TVStory Portugal